----------
v4.2.8-git
----------



------
v4.2.7
------

[jan] Update Italian translation.
[jan] Update Czech translation.
[mjr] Fix inconsistent handling of incoming HTML notes from ActiveSync clients
      (Bug #14045).
[mjr] Allow more reasonable length of description field to interop better with
      synchronized clients (Bug #14041).


------
v4.2.6
------

[mjr] Fix using custom SQL configuration parameters.


------
v4.2.5
------

[mjr] Fix fatal error when using Mnemo without Nag installed.


------
v4.2.4
------

[jan] Don't list notepads without SHOW permissions (Bug #13838).
[jan] Fix using custom SQL driver configuration.
[mjr] Fix truncation of body text when synchronizing over EAS when no
      truncationsize option is sent from client (Bug #13755).


------
v4.2.3
------

[jan] SECURITY: Fix permission check when editing notes (found by Christopher
      Neuhaus <cne@ruhrverband.de>).
[mms] Added ability to link to note via API.


------
v4.2.2
------

[mjr] Fix adding new notepads via the API.
[jan] Hide PDF button if Horde_Pdf_Writer is not installed (Bug #13624).
[mjr] Fix replacing tags in existing notes (Bug #13417).


------
v4.2.1
------

[mjr] Ensure default share attribute is set when auto determining a default
      share.
[mjr] Fix showing the notepad name in list view when show_notepad preference is
      set (Bug #13352).
[mjr] Add EAS client created shares to the sync_notpads preference (Bug
      #13359).
[mjr] Add missing API support for searchTags API (Bug #13361).
[mjr] Fix issue that caused notes to be tagged with a broken username.


------
v4.2.0
------

[jan] Fix error after successful import (Thomas Jarosch
      <thomas.jarosch@intra2net.com>, Bug #13272).
[jan] Fix link on edit form to delete notes (Thomas Jarosch
      <thomas.jarosch@intra2net.com>, Bug #13271).
[jan] Fix exporting tags to CSV (Thomas Jarosch <thomas.jarosch@intra2net.com>,
      Bug #13269).