@@ -2,6 +2,8 @@
 v4.2.8-git
 ----------
 
+[mjr] Remove object reference from Content when object is deleted (Bug #14112).
+[mjr] Remove tags from Content when tagged object is deleted (Bug #14112).
 
 
 ------
